feat: Refactor lineage graph traversal with `BfsNode` and `LineageNodeParser`, improve MongoDB querying with new indexes and pagination, and introduce document sanitization.